# varnish-cache

./: .dir-locals.el  .editorconfig  .envrc  .gitignore  .gitmodules  .lgtm.yml  .syntastic_c_config  .travis.yml  CONTRIBUTING  ChangeLog  INSTALL  LICENSE  Makefile.am  Makefile.inc.phk  Makefile.phk  README  README.Packaging  README.md  README.rst  autogen.des  autogen.phk  autogen.sh  config.phk  configure.ac  connection.c  connection.h  flint.lnt  listener.c  listener.h  log.c  migrate.py  migrate_script.sh  request.c  request.h  svn2cl.xsl  system-common.c  system-linux-gnu.c  update_proxy_via_6.sh  varnish-deprecated.m4  varnish-legacy.m4  (+8 more)
doc/: Makefile.am  Makefile.phk  README.WRITING_RST.rst  changes-1.0.3-1.0.4.xml  changes-1.0.4-1.1.xml  changes-1.0.4.xml  changes-1.1-1.1.1.xml  changes-1.1.1-1.1.2.xml  changes-1.1.1.xml  changes-1.1.2-2.0.xml  changes-1.1.2.xml  changes-2.0-2.0.1.xml  changes-2.0.1-2.0.2.xml  changes-2.0.1.xml  changes-2.0.2-2.0.3.xml  changes-2.0.2.xml  changes-2.0.3-2.0.4.xml  changes-2.0.3.xml  changes-2.0.4-2.0.5.xml  changes-2.0.4.xml  changes-2.0.5-2.0.6.xml  changes-2.0.5.xml  changes-2.0.6-2.1.0.xml  changes-2.0.6.xml  changes-2.0.xml  changes-2.1.0-2.1.1.xml  changes-2.1.0.xml  changes-2.1.1-2.1.2.xml  changes-2.1.1.xml  changes-2.1.2-2.1.3.xml  changes-2.1.2.xml  changes-2.1.3-2.1.4.xml  changes-2.1.3.xml  changes-2.1.4-2.1.5.xml  changes-2.1.4.xml  changes-2.1.5.xml  changes-html.xsl  changes-wiki.xsl  changes.css  changes.rst  (+1 more)
doc/graphviz/: Makefile.am  cache_backend_probe.dot  cache_fetch.dot  cache_http1_fsm.dot  cache_req_fsm.dot
doc/sphinx/: Makefile  Makefile.am  Makefile.phk  build_srcdir.sh  conf.py  conf.py.in  index.rst  vtc-syntax.awk  vtc-syntax.py
etc/: Makefile.am  default.vcl  devicedetect.vcl  example.vcl  mgt_filter  vcc_filter  vcl.conf  wrk_filter  zope-plone.vcl
include/: Makefile.am  argv.h  ban_vars.h  binary_heap.h  cli.h  cli_common.h  cli_priv.h  cli_serve.h  compat.h  flopen.h  generate.py  hash.h  http_headers.h  http_response.h  libvarnish.h  libvcc.h  libvcl.h  miniobj.h  pdiff.h  persistent.h  purge_vars.h  queue.h  sbuf.h  shmlog.h  shmlog_tags.h  stat_field.h  stats.h  svnid.h  tree.h  varnishapi.h  vas.h  vav.h  vbh.h  vbm.h  vbm_test.c  vbt.h  vcc_assert.h  vcc_interface.h  vcl.h  vcl_lang.h  (+58 more)
include/compat/: asprintf.h  clock_gettime.h  daemon.h  execinfo.h  pathmax.h  setproctitle.h  srandomdev.h  strlcat.h  strlcpy.h  strndup.h  vasprintf.h  vis.h
include/tbl/: README  acct_fields.h  acct_fields_bereq.h  acct_fields_req.h  backend_fail.h  backend_poll.h  ban_arg_oper.h  ban_oper.h  ban_vars.h  bereq_flags.h  beresp_flags.h  bo_flags.h  boc_state.h  body_status.h  cli_cmds.h  cli_flags.h  debug_bits.h  experimental_bits.h  feature_bits.h  h2_error.h  h2_frames.h  h2_settings.h  h2_stream.h  htc.h  http_headers.h  http_response.h  locks.h  mgt_vcc.h  obj_attr.h  oc_exp_flags.h  oc_flags.h  params.h  req_bereq_flags.h  req_body.h  req_flags.h  sess_attr.h  sess_close.h  steps.h  style.py  symbol_kind.h  (+17 more)
include/vapi/: vapi_options.h  voptget.h  vsc.h  vsc_int.h  vsig.h  vsl.h  vsl_int.h  vsm.h  vsm_int.h  workdir.h.in
include/varnish/: assert.h
lib/: Makefile.am  Makefile.phk  flint.lnt
lib/libcompat/: Makefile.am  asprintf.c  clock_gettime.c  setproctitle.c  srandomdev.c  strlcat.c  strlcpy.c  strndup.c  vasprintf.c  vis.c
lib/libjemalloc/: Makefile  Makefile.am  README  jemalloc_linux.c  malloc.3  malloc.c  rb.h
lib/libsbuf/: Makefile.am  sbuf.3  sbuf.c
lib/libvarnish/: Makefile.am  Makefile.phk  argv.c  assert.c  binary_heap.c  cli.c  cli_auth.c  cli_common.c  cli_serve.c  crc32.c  flint.lnt  flint.sh  flopen.c  inxorcise.c  num.c  subproc.c  tcp.c  time.c  vas.c  vav.c  vbh.c  vbt.c  vcli_proto.c  vcli_serve.c  vct.c  vefd.c  venc.c  verrno.c  version.c  vev.c  vfc.c  vfil.c  vfl.c  vin.c  vjsn.c  vlu.c  vmb.c  vnum.c  vpf.c  vre.c  (+16 more)
lib/libvarnishapi/: Makefile.am  Makefile.phk  base64.c  daemon.c  flint.lnt  flint.sh  generate.py  instance.c  libvarnishapi.map  shmlog.c  varnish_debug.c  varnish_log.c  varnish_util.c  vjsn.c  vjsn.h  vsc.c  vsc_priv.h  vsig.c  vsl.c  vsl.h  vsl2rst.c  vsl_api.h  vsl_arg.c  vsl_cursor.c  vsl_dispatch.c  vsl_glob_test.c  vsl_glob_test_coverage  vsl_log.c  vsl_query.c  vsl_stat.c  vslapi.h  vsm.c  vsm_api.h  vut.c  vxp.c  vxp.h  vxp_lexer.c  vxp_parse.c  vxp_test.c  vxp_test_coverage.sh
lib/libvarnishcompat/: Makefile.am  asprintf.c  daemon.c  execinfo.c  setproctitle.c  srandomdev.c  strlcat.c  strlcpy.c  strndup.c  vasprintf.c  vis.c
lib/libvarnishtools/: Makefile.am  Makefile.phk  opt2rst.c  vut.c
lib/libvcc/: Makefile.am  Makefile.phk  flint.lnt  flint.sh  generate.py  vcc_acl.c  vcc_action.c  vcc_backend.c  vcc_backend_util.c  vcc_compile.c  vcc_compile.h  vcc_expr.c  vcc_namespace.h  vcc_parse.c  vcc_source.c  vcc_storage.c  vcc_symb.c  vcc_token.c  vcc_types.c  vcc_utils.c  vcc_var.c  vcc_vmod.c  vcc_vmod.h  vcc_vmod_sym.c  vcc_xref.c  vmodtool.py  vsctool.py
lib/libvcl/: Makefile  Makefile.am  flint.lnt  flint.sh  generate.py  sample.vcl  symbol_kind.h  syntax.txt  vcc_acl.c  vcc_action.c  vcc_backend.c  vcc_backend_util.c  vcc_compile.c  vcc_compile.h  vcc_dir_dns.c  vcc_dir_random.c  vcc_obj.c  (+24 more)
man/: Makefile.am  vcl.7  vcl.7so  vsc2rst.c
varnish-doc/: autogen.sh  configure.ac
vmod/: Makefile.am  VSC_debug.vsc  automake_boilerplate_blob.am  automake_boilerplate_cookie.am  automake_boilerplate_debug.am  automake_boilerplate_directors.am  automake_boilerplate_h2.am  automake_boilerplate_math.am  automake_boilerplate_proxy.am  automake_boilerplate_purge.am  automake_boilerplate_std.am  automake_boilerplate_unix.am  automake_boilerplate_vext_debug.am  automake_boilerplate_vtc.am  base64.c  fall_back.c  flint.lnt  flint.sh  hash.c  misc.c  shard_cfg.c  shard_dir.c  tbl_case.h  url.c  vdir.c  vmod_blob.c  vmod_blob.h  vmod_blob.vcc  vmod_blob_base64.c  vmod_blob_hex.c  vmod_blob_id.c  vmod_blob_tbl_encodings.h  vmod_blob_url.c  vmod_cookie.c  vmod_cookie.vcc  vmod_debug.c  vmod_debug.h  vmod_debug.vcc  vmod_debug_acl.c  vmod_debug_dyn.c  (+39 more)
(+712 files in other folders)
